Corrected 404 error overflow while searching for non exixted blog

--- a/client/src/components/NotFound.module.css
+++ b/client/src/components/NotFound.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 30em;
+  width: 20em;
   height: 30em;
 }
 
@@ -11,7 +11,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 5em;
+  margin-top: 15em;
 }
 
 .antenna {
